--- a/ClassifactionAssignmentFinal.ipynb
+++ b/ClassifactionAssignmentFinal.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 28,
       "id": "1b540543",
       "metadata": {
         "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 29,
       "id": "647b1a4a",
       "metadata": {
         "execution": {
@@ -269,7 +269,7 @@
               "[5 rows x 27 columns]"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 29,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -282,7 +282,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 30,
       "id": "aa3a9d71",
       "metadata": {
         "execution": {
@@ -331,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 31,
       "id": "cd7164f0",
       "metadata": {
         "collapsed": false,
@@ -392,7 +392,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 31,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -404,7 +404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 32,
       "id": "fd60b7e9",
       "metadata": {
         "collapsed": false,
@@ -441,7 +441,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 33,
       "id": "edcc7566",
       "metadata": {
         "collapsed": false,
@@ -477,7 +477,7 @@
               "Name: Default, dtype: int64"
             ]
           },
-          "execution_count": 6,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 34,
       "id": "b0507c6e",
       "metadata": {
         "collapsed": false,
@@ -530,7 +530,7 @@
               "      dtype='object')"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -558,7 +558,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 35,
       "id": "d2f47f7f",
       "metadata": {
         "collapsed": false,
@@ -599,7 +599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 36,
       "id": "0afe6f93",
       "metadata": {
         "collapsed": false,
@@ -807,7 +807,7 @@
               "4       $0.00   $229,000.00   $229,000.00           0        0  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 36,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -819,7 +819,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 37,
       "id": "12437a72",
       "metadata": {
         "collapsed": false,
@@ -863,7 +863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 38,
       "id": "9d2da6c3",
       "metadata": {
         "collapsed": false,
@@ -912,7 +912,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 39,
       "id": "19dc5bbf",
       "metadata": {
         "collapsed": false,
@@ -948,7 +948,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 40,
       "id": "62e2d456",
       "metadata": {
         "collapsed": false,
@@ -987,7 +987,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 41,
       "id": "3ec6bd14",
       "metadata": {
         "execution": {
@@ -1017,7 +1017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 42,
       "id": "49516c01",
       "metadata": {
         "collapsed": false,
@@ -1055,7 +1055,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 43,
       "id": "074cf126",
       "metadata": {
         "collapsed": false,
@@ -1099,7 +1099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 44,
       "id": "4af0f04f",
       "metadata": {
         "collapsed": false,
@@ -1129,12 +1129,12 @@
       "outputs": [],
       "source": [
         "# We get dummies for the catagorical columns BankState and State.\n",
-        "df = pd.get_dummies(df,columns=['BankState','State'],prefix=['BankState','State'])"
+        "df = df.drop(columns=['BankState','State'])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 45,
       "id": "3738d465",
       "metadata": {
         "collapsed": false,
@@ -1171,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 46,
       "id": "9bc4e9ad",
       "metadata": {
         "collapsed": false,
@@ -1206,7 +1206,7 @@
               "       32, 56, 48, 11, 92, 22, 49, 55])"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 46,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1218,7 +1218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 47,
       "id": "de962508",
       "metadata": {
         "collapsed": false,
@@ -1250,14 +1250,13 @@
           "data": {
             "text/plain": [
               "Index(['NAICS', 'Term', 'NoEmp', 'NewExist', 'CreateJob', 'RetainedJob',\n",
-              "       'Franchise', 'UrbanRural', 'RevLineCr', 'LowDoc',\n",
-              "       ...\n",
-              "       'State_SD', 'State_TN', 'State_TX', 'State_UT', 'State_VA', 'State_VT',\n",
-              "       'State_WA', 'State_WI', 'State_WV', 'State_WY'],\n",
-              "      dtype='object', length=123)"
+              "       'Franchise', 'UrbanRural', 'RevLineCr', 'LowDoc', 'DisbursementGross',\n",
+              "       'BalanceGross', 'ChgOffPrinGr', 'GrAppv', 'SBA_Appv', 'Defaulted',\n",
+              "       'Default'],\n",
+              "      dtype='object')"
             ]
           },
-          "execution_count": 20,
+          "execution_count": 47,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1269,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 48,
       "id": "90f5426f",
       "metadata": {
         "collapsed": false,
@@ -1300,21 +1299,27 @@
         {
           "data": {
             "text/plain": [
-              "NAICS          int64\n",
-              "Term           int64\n",
-              "NoEmp          int64\n",
-              "NewExist     float64\n",
-              "CreateJob      int64\n",
-              "              ...   \n",
-              "State_VT       uint8\n",
-              "State_WA       uint8\n",
-              "State_WI       uint8\n",
-              "State_WV       uint8\n",
-              "State_WY       uint8\n",
-              "Length: 123, dtype: object"
+              "NAICS                  int64\n",
+              "Term                   int64\n",
+              "NoEmp                  int64\n",
+              "NewExist             float64\n",
+              "CreateJob              int64\n",
+              "RetainedJob            int64\n",
+              "Franchise              int64\n",
+              "UrbanRural             int64\n",
+              "RevLineCr              int64\n",
+              "LowDoc                 int64\n",
+              "DisbursementGross    float64\n",
+              "BalanceGross         float64\n",
+              "ChgOffPrinGr         float64\n",
+              "GrAppv               float64\n",
+              "SBA_Appv             float64\n",
+              "Defaulted              int64\n",
+              "Default                int64\n",
+              "dtype: object"
             ]
           },
-          "execution_count": 21,
+          "execution_count": 48,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1326,7 +1331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -1360,17 +1365,13 @@
               "      <th>UrbanRural</th>\n",
               "      <th>RevLineCr</th>\n",
               "      <th>LowDoc</th>\n",
-              "      <th>...</th>\n",
-              "      <th>State_SD</th>\n",
-              "      <th>State_TN</th>\n",
-              "      <th>State_TX</th>\n",
-              "      <th>State_UT</th>\n",
-              "      <th>State_VA</th>\n",
-              "      <th>State_VT</th>\n",
-              "      <th>State_WA</th>\n",
-              "      <th>State_WI</th>\n",
-              "      <th>State_WV</th>\n",
-              "      <th>State_WY</th>\n",
+              "      <th>DisbursementGross</th>\n",
+              "      <th>BalanceGross</th>\n",
+              "      <th>ChgOffPrinGr</th>\n",
+              "      <th>GrAppv</th>\n",
+              "      <th>SBA_Appv</th>\n",
+              "      <th>Defaulted</th>\n",
+              "      <th>Default</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -1386,15 +1387,11 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>60000.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>60000.0</td>\n",
+              "      <td>48000.0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -1410,15 +1407,11 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>40000.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>40000.0</td>\n",
+              "      <td>32000.0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -1434,15 +1427,11 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>287000.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>287000.0</td>\n",
+              "      <td>215250.0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -1458,15 +1447,11 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>1</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>35000.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>35000.0</td>\n",
+              "      <td>28000.0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
@@ -1482,21 +1467,16 @@
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
+              "      <td>229000.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>229000.0</td>\n",
+              "      <td>229000.0</td>\n",
               "      <td>0</td>\n",
               "      <td>0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>5 rows × 123 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
@@ -1507,24 +1487,22 @@
               "3      0    60      2       0.0          0            0          0   \n",
               "4      0   240     14       0.0          7            7          0   \n",
               "\n",
-              "   UrbanRural  RevLineCr  LowDoc  ...  State_SD  State_TN  State_TX  State_UT  \\\n",
-              "0           0          0       1  ...         0         0         0         0   \n",
-              "1           0          0       1  ...         0         0         0         0   \n",
-              "2           0          0       0  ...         0         0         0         0   \n",
-              "3           0          0       1  ...         0         0         0         0   \n",
-              "4           0          0       0  ...         0         0         0         0   \n",
+              "   UrbanRural  RevLineCr  LowDoc  DisbursementGross  BalanceGross  \\\n",
+              "0           0          0       1            60000.0           0.0   \n",
+              "1           0          0       1            40000.0           0.0   \n",
+              "2           0          0       0           287000.0           0.0   \n",
+              "3           0          0       1            35000.0           0.0   \n",
+              "4           0          0       0           229000.0           0.0   \n",
               "\n",
-              "   State_VA  State_VT  State_WA  State_WI  State_WV  State_WY  \n",
-              "0         0         0         0         0         0         0  \n",
-              "1         0         0         0         0         0         0  \n",
-              "2         0         0         0         0         0         0  \n",
-              "3         0         0         0         0         0         0  \n",
-              "4         0         0         0         0         0         0  \n",
-              "\n",
-              "[5 rows x 123 columns]"
+              "   ChgOffPrinGr    GrAppv  SBA_Appv  Defaulted  Default  \n",
+              "0           0.0   60000.0   48000.0          0        0  \n",
+              "1           0.0   40000.0   32000.0          0        0  \n",
+              "2           0.0  287000.0  215250.0          0        0  \n",
+              "3           0.0   35000.0   28000.0          0        0  \n",
+              "4           0.0  229000.0  229000.0          0        0  "
             ]
           },
-          "execution_count": 22,
+          "execution_count": 49,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1547,7 +1525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1561,7 +1539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1618,10 +1596,10 @@
       "source": [
         "# for classification we use accuracy and F1 score. We also use additional metrics to evaluate our model.\n",
         "accuracy = accuracy_score(y_test,pred)\n",
-        "f1 = f1_score(y_test,pred,average='micro')\n",
+        "f1 = f1_score(y_test,pred,average='macro')\n",
         "\n",
-        "psc = precision_score(y_test, pred, average=\"micro\")\n",
-        "rsc = recall_score(y_test, pred, average=\"micro\")\n",
+        "psc = precision_score(y_test, pred, average=\"macro\")\n",
+        "rsc = recall_score(y_test, pred, average=\"macro\")\n",
         "\n",
         "cfmm = multilabel_confusion_matrix(y_test, pred)"
       ]
@@ -1635,15 +1613,15 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "The Random Forest model has a accuracy score of 0.9999795791257824 and a F1 score of 0.9999795791257824.\n",
-            "This model also has a Precision Score of 0.9999795791257824.\n",
-            "This model also has a recall score of 0.9999795791257824.\n",
+            "The Random Forest model has a accuracy score of 0.9999795791257824 and a F1 score of 0.9999624721150484.\n",
+            "This model also has a Precision Score of 0.9999498048183403.\n",
+            "This model also has a recall score of 0.99997514043686.\n",
             "Below is the confusion matrix for the model:\n",
-            "[[[ 31813      0]\n",
-            "  [     4 164061]]\n",
+            "[[[ 31812      1]\n",
+            "  [     3 164062]]\n",
             "\n",
-            " [[164061      4]\n",
-            "  [     0  31813]]]\n"
+            " [[164062      3]\n",
+            "  [     1  31812]]]\n"
           ]
         }
       ],
